/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'antlr'
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2')
    }
}

dependencies {
    antlr 'org.antlr:antlr4:4.5'
    implementation 'org.antlr:antlr4-runtime:4.5'
    testImplementation 'junit:junit:4.12'
}

group = 'gavq'
version = '1.0.0'
description = 'kakuro-explorer'
sourceCompatibility = '14'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
